--- a/style.css
+++ b/style.css
@@ -5,26 +5,26 @@ body {
 }
 
 #parentContainer {
-  background-color: pink;
+  background-color: white;
   width: 100vw;
-  height: 100vh;
+  height: 90vh;
   display: flex;
 }
 
-h1 {
+/* h1 {
   text-align: center;
-}
+} */
 
 #column1 {
-  background-color: goldenrod;
   flex: 1;
   display: flex;
-  padding: 10px;
+  padding: 1px;
+  min-width: 20vh;
   order: inherit;
 }
 
 #column2 {
-  background-color: white
+  background-color: white;
   flex: 5;
   display: flex;
   flex-direction: column;
@@ -34,8 +34,30 @@ h1 {
 #leftNav {
   background-color: #8fbc8f;
   flex: 1;
-  margin: 10px;
+  margin: 1px;
   min-width: 15vh;
+}
+.leftLinks {
+  background-color: rgb(76, 116, 175);
+  border: none;
+  width: 120px;
+  border-radius: 2px;
+  color: white;
+  padding: 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 0px;
+  cursor: pointer;
+}
+a:visited {
+  color: white;
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
 }
 
 #header {
@@ -44,29 +66,13 @@ h1 {
   order: -1;
   position: static;
   color: white;
-  /* position: fixed;
-  margin: 20px;
-  min-height: 15vh;
-  flex-flow: row nowrap;
-  top: 0;
-  width: 100%;
-
-  order: 1; */
-  /* display: flex;
-  align-items: center;
-  flex: 1;
-
-  position: fixed;
-  width: 100%;
-  height: 40px; */
 }
 
 .articleListImage {
-  background-color: purple;
   display: flex;
   flex-flow: row wrap;
-  padding: 10px;
-  min-height: 30vh;
+  padding: 0px;
+ 
 }
 img {
   width: 100%;
@@ -75,41 +81,85 @@ img {
 #articleList {
   background-color: rgb(167, 220, 233);
   flex: 1;
-  margin: 10px;
+  margin: 0px;
   min-width: 40vh;
-  height: 300px;
+  height: 400px;
   overflow: scroll;
-  font-size: 22px;
+  font-size: 21px;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 p {
-  text-align: left;
+
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.article {
+  text-align: left;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h5 {
   text-align: left;
-}
-#articleImage {
-  background-color: yellow;
-  flex: 1;
-  margin: 10px;
-  min-width: 40vh;
-  height: 300px;
-  align-items: center;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#content {
+h5:hover {
+
+  color: red;
+}
+
+
+#articleImage {
+  background-color: rgb(167, 220, 233);
+  flex: 1;
+  margin: 0px;
+  min-width: 40vh;
+  height: 400px;
+  align-items: center;  
+  display: flex;
+  justify-content: center;
+
+}
+
+/* #content {
   background-color: white;
   flex: 1;
-  margin: 10px;
+  min-height: 13vh;
+  margin: 1px;
   overflow: scroll;
-  font-size: 22px;
+  font-size: 21px;
+  font-family: "Times New Roman", Times, serif;
+  text-align: left;
+} */
+
+article {
+  background-color: white;
+  flex: 1;
+  flex-wrap: nowrap;
+  min-height: 19vh;
+  margin: 1px;
+  overflow: scroll;
+  font-size: 21px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
 }
 
-#footer {
-  background-color: black;
+.footer {
+  background-color: rgb(143, 201, 224);
   color: white;
   flex: 1;
-  margin: 10px;
+  max-height: 8vh;
+  margin: 1px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  color: blue;
 }
+
 .hideMe {
 display: none;
 }
