--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 #parentContainer {
   background-color: white;
   width: 100vw;
-  height: 90vh;
+  /* height: 100%; */
+  height: 91vh;
   display: flex;
 }
 
@@ -51,6 +52,12 @@ body {
   margin: 4px 0px;
   cursor: pointer;
 }
+
+#search {
+  width: 115px;
+  /* height: 20px; */
+}
+
 a:visited {
   color: white;
   text-decoration: none;
@@ -72,10 +79,11 @@ a:link {
   display: flex;
   flex-flow: row wrap;
   padding: 0px;
- 
 }
 img {
   width: 100%;
+
+  /* transform: scaleX(-1); */
 }
 
 #articleList {
@@ -90,13 +98,12 @@ img {
 }
 
 p {
-
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .article {
   text-align: left;
+  font-weight: normal;
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -108,10 +115,8 @@ h5 {
 }
 
 h5:hover {
-
-  color: red;
+  font-weight: bold;
 }
-
 
 #articleImage {
   background-color: rgb(167, 220, 233);
@@ -119,10 +124,9 @@ h5:hover {
   margin: 0px;
   min-width: 40vh;
   height: 400px;
-  align-items: center;  
+  align-items: center;
   display: flex;
   justify-content: center;
-
 }
 
 /* #content {
@@ -143,7 +147,7 @@ article {
   min-height: 19vh;
   margin: 1px;
   overflow: scroll;
-  font-size: 21px;
+  font-size: 19px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: left;
 }
@@ -161,5 +165,5 @@ article {
 }
 
 .hideMe {
-display: none;
+  display: none;
 }
