--- a/style.css
+++ b/style.css
@@ -62,11 +62,14 @@ a:link {
 }
 
 #header {
+  display: flex;
   background-color: blue;
   min-height: 10vh;
   order: -1;
-  position: static;
   color: white;
+  position: sticky;
+  top: 0;
+  justify-content: center;
 }
 
 .articleListImage {
@@ -162,4 +165,29 @@ article {
   #hideForPrint {
     display: block;
   }
+}
+
+#div1 {
+  overflow: scroll;
+  /* width: 350px; */
+  width: 100%;
+  height: 70px;
+  padding: 1px;
+  text-align: left;
+  border: 1px solid #dd6f6f;
+}
+#remove {
+  overflow: scroll;
+  /* width: 350px; */
+  width: 100%;
+  height: 70px;
+  padding: 1px;
+  text-align: center;
+  border: 1px solid #dd6f6f;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
