--- a/style.css
+++ b/style.css
@@ -169,12 +169,14 @@ article {
 
 #div1 {
   overflow: scroll;
-  /* width: 350px; */
   width: 100%;
   height: 70px;
   padding: 1px;
   text-align: left;
   border: 1px solid #dd6f6f;
+}
+#printPage {
+  cursor: progress;
 }
 #remove {
   overflow: scroll;
